--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /bower_components
 /build
-/dist/demo
+/dist/*
 /node_modules
 .vscode
 .idea
@@ -8,3 +8,4 @@
 *.ipr
 yarn.lock
 *.swp
+package-lock.json
